--- a/templates/plat/index.html.twig
+++ b/templates/plat/index.html.twig
@@ -12,6 +12,7 @@
                 <th>Nom</th>
                 <th>Description</th>
                 <th>Prix</th>
+                <th>slug</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -22,6 +23,7 @@
                 <td>{{ plat.nom }}</td>
                 <td>{{ plat.description }}</td>
                 <td>{{ plat.prix }}</td>
+                <td>{{ plat.slug }}</td>
                 <td>
                     <a href="{{ path('app_plat_show', {'id': plat.id}) }}">show</a>
                     <a href="{{ path('app_plat_edit', {'id': plat.id}) }}">edit</a>
